<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_UI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activityNavigationTest.fragments.HomeFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/firstBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="FirstFrgament"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/secondBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="SecondFrgament"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/threeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="||ThreeFrgament||"
        android:linksClickable="true"
        android:autoLink="none"
        android:textColor="@color/white" />

</LinearLayout>