<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secondUI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityNavigationTest.fragments.SecondFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="MOVIE NAME"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="ACTORS NAME"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/descriptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="DESCRIPTION"
                android:textColor="@color/black"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>